assert-struct/tests/snapshots/enums__enum_variant_mismatch.snap
---
source: assert-struct/tests/enums.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enums_errors/enum_variant_mismatch.rs:28:21
   |
28 |             status: Status::Active,
   |                     ^^^^^^^^^^^^^^ expected variant Status::Active, got Inactive
